加入可以有權限驗證的 pull image 方法
