# api.go
@@ -25,6 +25,11 @@ type ContainerConfig struct {
 	Env           []string `form:"env" json:"env" example:"abc=123,xyz=999"`
 }
 
+type ContainerConfigWithAuth struct {
+	ContainerConfig
+	WithAuth bool `form:"withAuth" json:"withAuth" example:"true`
+}
+
 // @Summary Remove an image
 // @Description Remove an image by image name
 // @Accept  json
@@ -68,6 +73,31 @@ func PullImageApi(c *gin.Context) {
 	}
 
 	msg, err = PullImage(json.ImageNameTag)
+	if err != nil {
+		c.JSON(http.StatusOK, gin.H{"msg": msg, "err": err.Error()})
+	} else {
+		c.JSON(http.StatusOK, gin.H{"msg": msg, "err": ""})
+	}
+}
+
+// @Summary Pull an image with authentication
+// @Description Pull an image with authentication by image name. Your should set -cracct and -crpwd flag for username and password when running the console.
+// @Accept  json
+// @Produce  json
+// @Param body body Image true "the body content"
+// @Success 200 {body} string "the sample of body is {\"msg\": \"message\", \"err\":\"message\"}"
+// @Router /pull [post]
+func PullImageWithAuthApi(c *gin.Context) {
+
+	var err error
+	var msg string
+	var json Image
+	if err = c.ShouldBindJSON(&json); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	msg, err = PullImageWithAuth(json.ImageNameTag)
 	if err != nil {
 		c.JSON(http.StatusOK, gin.H{"msg": msg, "err": err.Error()})
 	} else {
@@ -172,40 +202,48 @@ func RunContainerApi(c *gin.Context) {
 // @Description It do 1. stop container, 2. remove container 3. remove image 4. pull image 5. run container.  If one step failed, then it stop immediately.
 // @Accept  json
 // @Produce  json
-// @Param body body ContainerConfig true "the body content"
+// @Param body body ContainerConfigWithAuth true "the body content"
 // @Success 200 {body} string "the sample of body is {\"msg\": \"message\", \"err\":\"message\"}"
 // @Router /updaterunningcontainer [post]
 func UpdateRunningContainerApi(c *gin.Context) {
 	var err error
 	var msg string
+	var errMsg string
 	var tempMsg string
-	var json ContainerConfig
+	var json ContainerConfigWithAuth
 	if err = c.ShouldBindJSON(&json); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	if tempMsg, err = StopContainer(json.ContainerName); err != nil {
-		msg += tempMsg
-		c.JSON(http.StatusOK, gin.H{"msg": msg, "err": err.Error()})
-		return
+	tempMsg, err = StopContainer(json.ContainerName)
+	msg += tempMsg
+	if err != nil {
+		errMsg += err.Error()
 	}
 
-	if tempMsg, err = RemoveContainer(json.ContainerName); err != nil {
-		msg += tempMsg
-		c.JSON(http.StatusOK, gin.H{"msg": msg, "err": err.Error()})
-		return
+	tempMsg, err = RemoveContainer(json.ContainerName)
+	msg += tempMsg
+	if err != nil {
+		errMsg += err.Error()
 	}
 
-	if tempMsg, err = RemoveImage(json.ImageNameTag); err != nil {
-		msg += tempMsg
-		c.JSON(http.StatusOK, gin.H{"msg": msg, "err": err.Error()})
-		return
+	tempMsg, err = RemoveImage(json.ImageNameTag)
+	msg += tempMsg
+	if err != nil {
+		errMsg += err.Error()
 	}
-
-	if tempMsg, err = PullImage(json.ImageNameTag); err != nil {
+	if json.WithAuth {
+		tempMsg, err = PullImageWithAuth(json.ImageNameTag)
 		msg += tempMsg
-		c.JSON(http.StatusOK, gin.H{"msg": msg, "err": err.Error()})
-		return
+		if err != nil {
+			errMsg += err.Error()
+		}
+	} else {
+		tempMsg, err = PullImage(json.ImageNameTag)
+		msg += tempMsg
+		if err != nil {
+			errMsg += err.Error()
+		}
 	}
 
 	exportSet := nat.Port(fmt.Sprintf("%s/tcp", json.ExportPort))
@@ -228,10 +266,9 @@ func UpdateRunningContainerApi(c *gin.Context) {
 		json.RestartPolicy)
 
 	msg += tempMsg
-
 	if err != nil {
-		c.JSON(http.StatusOK, gin.H{"msg": msg, "err": err.Error()})
-	} else {
-		c.JSON(http.StatusOK, gin.H{"msg": msg, "err": ""})
+		errMsg += err.Error()
 	}
+	c.JSON(http.StatusOK, gin.H{"msg": msg, "err": errMsg})
+
 }
