# docs/swagger.json
@@ -7,14 +7,14 @@
     "paths": {
         "/pull": {
             "post": {
-                "description": "Pull an image by image name",
+                "description": "Pull an image with authentication by image name. Your should set -cracct and -crpwd flag for username and password when running the console.",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Pull an image",
+                "summary": "Pull an image with authentication",
                 "parameters": [
                     {
                         "description": "the body content",
@@ -177,7 +177,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.ContainerConfig"
+                            "$ref": "#/definitions/main.ContainerConfigWithAuth"
                         }
                     }
                 ],
@@ -248,6 +248,55 @@
                 "restartPolicy": {
                     "type": "string",
                     "example": "always"
+                }
+            }
+        },
+        "main.ContainerConfigWithAuth": {
+            "type": "object",
+            "required": [
+                "containerName",
+                "exportPort",
+                "hostIP",
+                "hostPort",
+                "imageNameTag"
+            ],
+            "properties": {
+                "containerName": {
+                    "type": "string",
+                    "example": "dockerapp"
+                },
+                "env": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "abc=123",
+                        "xyz=999"
+                    ]
+                },
+                "exportPort": {
+                    "type": "string",
+                    "example": "80"
+                },
+                "hostIP": {
+                    "type": "string",
+                    "example": "0.0.0.0"
+                },
+                "hostPort": {
+                    "type": "string",
+                    "example": "8080"
+                },
+                "imageNameTag": {
+                    "type": "string",
+                    "example": "mileslin/dockerlab:latest"
+                },
+                "restartPolicy": {
+                    "type": "string",
+                    "example": "always"
+                },
+                "withAuth": {
+                    "type": "boolean"
                 }
             }
         },
